overlapping position issue fixed by specifying positions with numbers